feat: DSTEW-1902 Updated the swagger schema example generator to include new schema. Changed proceedingId to id and added required id. Checkstle version upgrade and adjusted regex to handle new use of underscore for unused variable
Signed-off-by: david-stuart-justice <David.Stuart@justice.gov.uk>